# Projekcik

./: CMakeLists.txt  README.md  main.cpp
include/: Level.h  LevelEditor.h  MainMenu.h  Player.h
src/: Level.cpp  LevelEditor.cpp  MainMenu.cpp  Player.cpp  Texture.cpp  main.cpp
